Add images and fix margin

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" href="./styles/bio.css" />
   </head>
   <body>
-    <header>
+    <nav>
       <h1>Bandsite</h1>
-      <section>
+      <section class="nav-subheading">
         <h3>Biography</h3>
         <h3>Shows</h3>
       </section>
-    </header>
+    </nav>
 
     <main>
-      <section>
+      <section class="hero-section">
         <h1>The Bees Knees</h1>
       </section>
 
-      <section>
+      <section class="about-section">
         <h1>About the Musicians</h1>
-        <img src="./assets/Images/band.jpg" alt="">
+        <img class="about-section__img" src="./assets/Images/band.jpg" alt="">
         <p>
           “We push each other to be the best. It’s not uncommon for one of us to
           say ‘this needs to be better, back to the drawing board’”
@@ -52,7 +52,7 @@
         </p>
       </section>
 
-      <section> 
+      <section class="photo-gallery"> 
         <h2> Photo Gallery </h2>
         <img src="./assets/Images/Photo-gallery-1.jpg" alt="">
         <img src="./assets/Images/Photo-gallery-2.jpg" alt="">
@@ -70,7 +70,7 @@
     <footer> 
         <h1> Get in Touch </h1>
         
-        <section>
+        <section class="icons">
             <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="">
             <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="">
             <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="">
@@ -81,6 +81,25 @@
             <p> 503 Broadway Penthouse </p>
             <p> New York, NY 10012, USA </p>
             <p> info@thebeesknees.com </p>
+        </section>
+
+        <section>
+            <h3> Limitless Artist Group </h3>
+            <p> Booking Agent for </p>
+            <p> US/South America/Japan </p>
+            <p> bookings@limitlessag.com</p>
+        </section>
+
+        <section>
+            <h3> ARCH Entertainment </h3>
+            <p> Booking Agent for </p>
+            <p> UK/AU/EU </p>
+            <p> bookings@archentertainment.com </p>
+        </section>
+
+        <section>
+          <h2> BANDSITE </h2>
+          <p> Copyright The Bees Knees © 2023 All Rights Reserved </p>
         </section>
     </footer>
   </body>
