Update navbar and herobanner

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>
-      <h1>Bandsite</h1>
+      <h1> BANDSITE </h1>
       <section class="nav-subheading">
         <h3>Biography</h3>
         <h3>Shows</h3>
@@ -16,9 +16,11 @@
     </nav>
 
     <main>
-      <section class="hero-section">
-        <h1>The Bees Knees</h1>
-      </section>
+      <div class="hero-section">
+        <section class="hero-section__text">
+          <h1>The Bees Knees</h1>
+        </section>
+      </div>
 
       <section class="about-section">
         <h1>About the Musicians</h1>
