Update mobile styling

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> The Bees Knees </title>
+    <title>The Bees Knees</title>
     <link rel="stylesheet" href="./styles/bio.css" />
   </head>
   <body>
     <nav>
-      <h1> BANDSITE </h1>
+      <h1>BANDSITE</h1>
       <section class="nav-subheading">
         <h3>Biography</h3>
         <h3>Shows</h3>
@@ -16,23 +16,22 @@
     </nav>
 
     <main>
-      <div class="hero-section">
-        <section class="hero-section__text">
-          <h1>The Bees Knees</h1>
-        </section>
-      </div>
+      <section class="hero-section">
+        <h1>The Bees Knees</h1>
+        <div class="hero-section__overlay">a</div>
+      </section>
 
       <section class="about-section">
         <h1>About the Musicians</h1>
-        <img class="about-section__img" src="./assets/Images/band.jpg" alt="">
-        <p>
+        <img class="about-section__img" src="./assets/Images/band.jpg" alt="" />
+        <h3>
           “We push each other to be the best. It’s not uncommon for one of us to
           say ‘this needs to be better, back to the drawing board’”
-        </p>
-        <p>Lead vocalist of The Bees Knees</p>
+        </h3>
+        <h3> - Lead vocalist of The Bees Knees</h3>
       </section>
 
-      <section>
+      <section class="band-description">
         <h3>The Bees Knees</h3>
         <p>
           The Bees Knees is a pop rock band originating from San Francisco,
@@ -42,67 +41,68 @@
           attention from their future manager. Having extensive experience
           working with both new and seasoned acts, the manager was confident the
           band could succeed even further with more support, pushing The Bees
-          Knees to sign with a well known record label. From there, the band has
-          soared, gaining international recognition and ranking in the top 10 on
-          the Poster Charts. New fans immediately fell in love with the band’s
-          original and organic attitude, solidifying their place as one of the
-          hottest and fastest up and coming acts of this century. Fans
-          affectionately refer to themselves as “The Hive” and are drawn to
-          their candid and authentic performances on stage. The Bees Knees are
-          currently recording their second studio album, looking to be released
-          in early 2024.
+          Knees to sign with a well known record label.
+        </p>
+        <p>
+          From there, the band has soared, gaining international recognition and
+          ranking in the top 10 on the Poster Charts. New fans immediately fell
+          in love with the band’s original and organic attitude, solidifying
+          their place as one of the hottest and fastest up and coming acts of
+          this century. Fans affectionately refer to themselves as “The Hive”
+          and are drawn to their candid and authentic performances on stage. The
+          Bees Knees are currently recording their second studio album, looking
+          to be released in early 2024.
         </p>
       </section>
 
-      <section class="photo-gallery"> 
-        <h2> Photo Gallery </h2>
-        <img src="./assets/Images/Photo-gallery-1.jpg" alt="">
-        <img src="./assets/Images/Photo-gallery-2.jpg" alt="">
-        <img src="./assets/Images/Photo-gallery-3.jpg" alt="">
-        <img src="./assets/Images/Photo-gallery-4.jpg" alt="">
-        <img src="./assets/Images/Photo-gallery-5.jpg" alt="">
-        <img src="./assets/Images/Photo-gallery-6.jpg" alt="">
-        <img src="./assets/Images/Photo-gallery-7.jpg" alt="">
-        <img src="./assets/Images/Photo-gallery-8.jpg" alt="">
-        <img src="./assets/Images/Photo-gallery-9.jpg" alt="">
+      <section class="photo-gallery">
+        <h2>Photo Gallery</h2>
+        <img src="./assets/Images/Photo-gallery-1.jpg" alt="" />
+        <img src="./assets/Images/Photo-gallery-2.jpg" alt="" />
+        <img src="./assets/Images/Photo-gallery-3.jpg" alt="" />
+        <img src="./assets/Images/Photo-gallery-4.jpg" alt="" />
+        <img src="./assets/Images/Photo-gallery-5.jpg" alt="" />
+        <img src="./assets/Images/Photo-gallery-6.jpg" alt="" />
+        <img src="./assets/Images/Photo-gallery-7.jpg" alt="" />
+        <img src="./assets/Images/Photo-gallery-8.jpg" alt="" />
+        <img src="./assets/Images/Photo-gallery-9.jpg" alt="" />
       </section>
-
     </main>
 
-    <footer> 
-        <h1> Get in Touch </h1>
-        
-        <section class="icons">
-            <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="">
-            <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="">
-            <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="">
-        </section>
+    <footer>
+      <h1>Get in Touch</h1>
 
-        <section>
-            <h3> The Bees Knees Management </h3>
-            <p> 503 Broadway Penthouse </p>
-            <p> New York, NY 10012, USA </p>
-            <p> info@thebeesknees.com </p>
-        </section>
+      <section class="icons">
+        <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="" />
+        <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="" />
+        <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="" />
+      </section>
 
-        <section>
-            <h3> Limitless Artist Group </h3>
-            <p> Booking Agent for </p>
-            <p> US/South America/Japan </p>
-            <p> bookings@limitlessag.com</p>
-        </section>
+      <section>
+        <h3>The Bees Knees Management</h3>
+        <p>503 Broadway Penthouse</p>
+        <p>New York, NY 10012, USA</p>
+        <p>info@thebeesknees.com</p>
+      </section>
 
-        <section>
-            <h3> ARCH Entertainment </h3>
-            <p> Booking Agent for </p>
-            <p> UK/AU/EU </p>
-            <p> bookings@archentertainment.com </p>
-        </section>
+      <section>
+        <h3>Limitless Artist Group</h3>
+        <p>Booking Agent for</p>
+        <p>US/South America/Japan</p>
+        <p>bookings@limitlessag.com</p>
+      </section>
 
-        <section>
-          <h2> BANDSITE </h2>
-          <p> Copyright The Bees Knees © 2023 All Rights Reserved </p>
-        </section>
+      <section>
+        <h3>ARCH Entertainment</h3>
+        <p>Booking Agent for</p>
+        <p>UK/AU/EU</p>
+        <p>bookings@archentertainment.com</p>
+      </section>
+
+      <section>
+        <h2>BANDSITE</h2>
+        <p>Copyright The Bees Knees © 2023 All Rights Reserved</p>
+      </section>
     </footer>
   </body>
 </html>
