--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
         <h3>The Bees Knees Management</h3>
         <p>503 Broadway Penthouse</p>
         <p>New York, NY 10012, USA</p>
-        <p>info@thebeesknees.com</p>
+        <p class="email">info@thebeesknees.com</p>
       </section>
 
       <section>
         <h3>Limitless Artist Group</h3>
         <p>Booking Agent for</p>
         <p>US/South America/Japan</p>
-        <p>bookings@limitlessag.com</p>
+        <p class="email">bookings@limitlessag.com</p>
       </section>
 
       <section>
         <h3>ARCH Entertainment</h3>
         <p>Booking Agent for</p>
         <p>UK/AU/EU</p>
-        <p>bookings@archentertainment.com</p>
+        <p class="email">bookings@archentertainment.com</pcl>
       </section>
 
       <section>
