Finish full website design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>
-      <h1>BANDSITE</h1>
+      <h1><a href="./index.html"> BANDSITE </a></h1>
       <section class="nav-subheading">
         <h3>Biography</h3>
         <h3>Shows</h3>
@@ -59,15 +59,21 @@
 
       <section class="photo-gallery">
         <h2>Photo Gallery</h2>
-        <img src="./assets/Images/Photo-gallery-1.jpg" alt="" />
-        <img src="./assets/Images/Photo-gallery-2.jpg" alt="" />
-        <img src="./assets/Images/Photo-gallery-3.jpg" alt="" />
-        <img src="./assets/Images/Photo-gallery-4.jpg" alt="" />
-        <img src="./assets/Images/Photo-gallery-5.jpg" alt="" />
-        <img src="./assets/Images/Photo-gallery-6.jpg" alt="" />
-        <img src="./assets/Images/Photo-gallery-7.jpg" alt="" />
-        <img src="./assets/Images/Photo-gallery-8.jpg" alt="" />
-        <img src="./assets/Images/Photo-gallery-9.jpg" alt="" />
+        <div class="photo-gallery__images">
+          <img src="./assets/Images/Photo-gallery-1.jpg" alt="" />
+          <img src="./assets/Images/Photo-gallery-2.jpg" alt="" />
+          <img src="./assets/Images/Photo-gallery-3.jpg" alt="" />
+        </div>
+        <div class="photo-gallery__images">
+          <img src="./assets/Images/Photo-gallery-4.jpg" alt="" />
+          <img src="./assets/Images/Photo-gallery-5.jpg" alt="" />
+          <img src="./assets/Images/Photo-gallery-6.jpg" alt="" />
+        </div>
+        <div class="photo-gallery__images">
+          <img src="./assets/Images/Photo-gallery-7.jpg" alt="" />
+          <img src="./assets/Images/Photo-gallery-8.jpg" alt="" />
+          <img src="./assets/Images/Photo-gallery-9.jpg" alt="" /> 
+        </div>
       </section>
     </main>
 
@@ -80,29 +86,35 @@
         <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="" />
       </section>
 
-      <section>
-        <h3>The Bees Knees Management</h3>
-        <p>503 Broadway Penthouse</p>
-        <p>New York, NY 10012, USA</p>
-        <p class="email">info@thebeesknees.com</p>
-      </section>
+      <div class="bandsite-logo">
+        <h1> BANDSITE </h1>
+      </div>
 
-      <section>
-        <h3>Limitless Artist Group</h3>
-        <p>Booking Agent for</p>
-        <p>US/South America/Japan</p>
-        <p class="email">bookings@limitlessag.com</p>
-      </section>
+      <div class="footer-section-body">
+        <section>
+          <h3>The Bees Knees Management</h3>
+          <p>503 Broadway Penthouse</p>
+          <p>New York, NY 10012, USA</p>
+          <p class="email">info@thebeesknees.com</p>
+        </section>
+  
+        <section>
+          <h3>Limitless Artist Group</h3>
+          <p>Booking Agent for</p>
+          <p>US/South America/Japan</p>
+          <p class="email">bookings@limitlessag.com</p>
+        </section>
+  
+        <section>
+          <h3>ARCH Entertainment</h3>
+          <p>Booking Agent for</p>
+          <p>UK/AU/EU</p>
+          <p class="email">bookings@archentertainment.com</pcl>
+        </section>
+      </div>
 
-      <section>
-        <h3>ARCH Entertainment</h3>
-        <p>Booking Agent for</p>
-        <p>UK/AU/EU</p>
-        <p class="email">bookings@archentertainment.com</pcl>
-      </section>
-
-      <section>
-        <h2>BANDSITE</h2>
+      <section class="bandsite-bottom">
+        <h2 class="bandsite-bottom__logo">BANDSITE</h2>
         <p>Copyright The Bees Knees © 2023 All Rights Reserved</p>
       </section>
     </footer>
