Fix alternative image text

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
       <section class="photo-gallery">
         <h2>Photo Gallery</h2>
         <div class="photo-gallery__images">
-          <img src="./assets/Images/Photo-gallery-1.jpg" alt="" />
-          <img src="./assets/Images/Photo-gallery-2.jpg" alt="" />
-          <img src="./assets/Images/Photo-gallery-3.jpg" alt="" />
+          <img src="./assets/Images/Photo-gallery-1.jpg" alt="band atmosphere" />
+          <img src="./assets/Images/Photo-gallery-2.jpg" alt="raving fan" />
+          <img src="./assets/Images/Photo-gallery-3.jpg" alt="fans waving" />
         </div>
         <div class="photo-gallery__images">
-          <img src="./assets/Images/Photo-gallery-4.jpg" alt="" />
-          <img src="./assets/Images/Photo-gallery-5.jpg" alt="" />
-          <img src="./assets/Images/Photo-gallery-6.jpg" alt="" />
+          <img src="./assets/Images/Photo-gallery-4.jpg" alt="fan on another fan's back" />
+          <img src="./assets/Images/Photo-gallery-5.jpg" alt="streamers" />
+          <img src="./assets/Images/Photo-gallery-6.jpg" alt="the bees knees singing" />
         </div>
         <div class="photo-gallery__images">
-          <img src="./assets/Images/Photo-gallery-7.jpg" alt="" />
-          <img src="./assets/Images/Photo-gallery-8.jpg" alt="" />
-          <img src="./assets/Images/Photo-gallery-9.jpg" alt="" /> 
+          <img src="./assets/Images/Photo-gallery-7.jpg" alt="colorful party atmosphere" />
+          <img src="./assets/Images/Photo-gallery-8.jpg" alt="the bees knees DJing" />
+          <img src="./assets/Images/Photo-gallery-9.jpg" alt="confetti falling on fans" /> 
         </div>
       </section>
     </main>
@@ -81,9 +81,9 @@
       <h1>Get in Touch</h1>
 
       <section class="icons">
-        <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="" />
-        <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="" />
-        <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="" />
+        <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="instagram icon" />
+        <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="facebook icon" />
+        <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="twitter icon" />
       </section>
 
       <div class="bandsite-logo">
