Update everything except for hover states

--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
     </section>
   </main>
 
-  <section class="comment-section">
+  <section class="comment-section-header">
     <h2> Join the Conversation </h2>
+  </section>
+
+  <section class="comment-section">
     
     <div>
       <img class="avatar" src="./assets/Images/Mohan-muruge.jpg" alt="Mohan Muruge">
