Update hover states and dynamic interactions

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <nav>
     <h1><a href="./index.html"> BANDSITE </a></h1>
     <section class="nav-subheading">
-      <h3>Biography</h3>
-      <h3>Shows</h3>
+      <h3 class="active"><a href="./index.html"> Biography </a></h3>
+      <h3><a href="./pages/shows.html">Shows</a></h3>
     </section>
   </nav>
 
