--- a/pages/shows.html
+++ b/pages/shows.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <nav>
-      <h1><a href="./index.html"> BANDSITE </a></h1>
+      <h1><a href="../index.html"> BANDSITE </a></h1>
       <section class="nav-subheading">
-        <h3>Biography</h3>
-        <h3>Shows</h3>
+        <h3><a href="../index.html"> Biography </a></h3>
+        <h3 class="active2"><a href="../pages/shows.html">Shows</a></h3>
       </section>
     </nav>
 
