--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Bees Knees</title>
   <link rel="stylesheet" href="./styles/bio.css" />
-  <script src="./scripts/index-page.js" defer> </script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
+  <script src="./scripts/band-site-api.js" type="module" defer></script>
+  <script src="./scripts/index-page.js" type="module" defer></script>
+  <script src="./scripts/build-shows-page.js" type="module" defer></script>
 </head>
 
 <body>
